shipping button handler ready

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <div class="form-content">
             <div class="form-nav">
                 <ul class="form-nav-list">
-                    <li class="font-purple">Shipping</li>
-                    <li>Billing</li>
-                    <li>Payment</li>
+                    <li data-slide-nav="shipping" class="font-purple">Shipping</li>
+                    <li data-slide-nav="billing">Billing</li>
+                    <li data-slide-nav="payment">Payment</li>
                 </ul>
             </div>
             <form class="form-slides">
-                <div class="form-slide shipping-info visible">
+                <div data-slide="shipping" class="form-slide shipping-info visible">
                     <div class="form-slide-title">
                         <span class="form-slide-title-text font-purple">Shipping Info</span>
                     </div>
@@ -45,10 +45,10 @@
                         </div>
                         <div class="input-container">
                             <input type="text"
-                                   name="full-name"
+                                   name="shipping-full-name"
                                    class="input-field input-required"
                                    placeholder="Full Name"
-                                   title="Full Name"
+                                   title="Full Name" data-copy="full-name"
                             >
                             <p class="input-tooltip">
                                 Please enter recipient full name
@@ -73,10 +73,11 @@
                         </div>
                         <div class="input-container">
                             <input type="text"
-                                   name="street-address"
+                                   name="shipping-street-address"
                                    class="input-field input-required"
                                    placeholder="Street Address"
                                    title="Street Address"
+                                   data-copy="street-address"
                             >
                             <p class="input-tooltip">
                                 Please enter shipping street address
@@ -84,18 +85,20 @@
                         </div>
                         <div class="input-container">
                             <input type="text"
-                                   name="apt"
+                                   name="shipping-apt"
                                    class="input-field"
                                    placeholder="Apt, Suite, Bldg, Gate Code. (optional)"
                                    title="Apt, Suite, Bldg, Gate Code. (optional)"
+                                   data-copy="apt"
                             >
                         </div>
                         <div class="input-container">
                             <input type="text"
-                                   name="city"
+                                   name="shipping-city"
                                    class="input-field input-required"
                                    placeholder="City"
                                    title="City"
+                                   data-copy="city"
                             >
                             <img src="images/city.svg" alt="" class="input-img">
                             <p class="input-tooltip">
@@ -104,11 +107,13 @@
                         </div>
                         <div class="inputs-row">
                             <div class="input-container">
-                                <select name="country"
+                                <select name="shipping-country"
                                         class="input-field input-required"
                                         title="Country"
+                                        data-copy="country"
                                 >
-                                    <option disabled selected>Country</option>
+                                    <option disabled selected value="">Country</option>
+                                    <option value="Armenia">Armenia</option>
                                 </select>
                                 <img src="images/bottom-arrow.svg" alt="" class="input-img">
                                 <p class="input-tooltip">
@@ -117,10 +122,11 @@
                             </div>
                             <div class="input-container input-row-small">
                                 <input type="text"
-                                       name="zip"
+                                       name="shipping-zip"
                                        class="input-field input-required"
                                        placeholder="ZIP"
                                        title="ZIP"
+                                       data-copy="zip"
                                 >
                                 <p class="input-tooltip">
                                     Please enter shipping ZIP
@@ -132,18 +138,18 @@
                         <button type="button" class="btn">Continue</button>
                     </div>
                 </div>
-                <div class="form-slide billing-info ">
+                <div data-slide="billing" class="form-slide billing-info ">
                     <div class="form-slide-title">
                         <span class="form-slide-title-text font-purple">Billing Information</span>
-                        <a href="#" class="title-link font-purple">Same as shipping</a>
+                        <a href="#" class="title-link font-purple" id="copy-data">Same as shipping</a>
                     </div>
                     <div class="fieldset">
                         <div class="fieldset-title font-purple">
                             Billing Contact
                         </div>
                         <div class="input-container">
-                            <input type="text" name="full-name" class="input-field input-required"
-                                   placeholder="Full Name" title="Full Name">
+                            <input type="text" name="billing-full-name" class="input-field input-required"
+                                   placeholder="Full Name" title="Full Name" data-paste="full-name">
                             <p class="input-tooltip">Please enter recipient full name</p>
                         </div>
                         <div class="input-container">
@@ -157,32 +163,42 @@
                             Billing Address
                         </div>
                         <div class="input-container">
-                            <input type="text" name="street-address" class="input-field input-required"
-                                   placeholder="Street Address" title="Street Address">
+                            <input type="text" name="billing-street-address" class="input-field input-required"
+                                   placeholder="Street Address" title="Street Address" data-paste="street-address">
                             <p class="input-tooltip">Please enter shipping street address</p>
                         </div>
                         <div class="input-container">
-                            <input type="text" name="apt" class="input-field"
+                            <input type="text" name="billing-apt" class="input-field"
                                    placeholder="Apt, Suite, Bldg, Gate Code. (optional)"
-                                   title="Apt, Suite, Bldg, Gate Code. (optional)">
+                                   title="Apt, Suite, Bldg, Gate Code. (optional)"
+                                   data-paste="apt"
+                            >
                         </div>
                         <div class="input-container">
-                            <input type="text" name="city" class="input-field input-required" placeholder="City"
-                                   title="City">
-                            <img src="images/city.svg" alt="" class="input-img">
+                            <input type="text" name="billing-city" class="input-field input-required" placeholder="City"
+                                   title="City"
+                                   data-paste="city"
+                            >
+                            <img src="images/city-target.svg" alt="" class="input-img">
                             <p class="input-tooltip">Please enter shipping city</p>
                         </div>
                         <div class="inputs-row">
                             <div class="input-container">
-                                <select name="country" class="input-field input-required" title="Country">
-                                    <option disabled selected>Country</option>
+                                <select name="billing-country" class="input-field input-required" title="Country"
+                                        data-paste="country"
+                                >
+                                    <option disabled selected value="">Country</option>
+                                    <option value="Armenia">Armenia</option>
                                 </select>
-                                <img src="images/right-arrow.svg" alt="" class="input-img">
+                                <img src="images/bottom-arrow.svg" alt="" class="input-img">
                                 <p class="input-tooltip">Please enter shipping country</p>
                             </div>
                             <div class="input-container input-row-small">
-                                <input type="text" name="zip" class="input-field input-required" placeholder="ZIP"
-                                       title="ZIP">
+                                <input type="text" name="billing-zip" class="input-field input-required"
+                                       placeholder="ZIP"
+                                       title="ZIP"
+                                       data-paste="zip"
+                                >
                                 <p class="input-tooltip">Please enter shipping ZIP</p>
                             </div>
                         </div>
@@ -191,7 +207,7 @@
                         <button type="button" class="btn">Continue</button>
                     </div>
                 </div>
-                <div class="form-slide payment ">
+                <div data-slide="payment" class="form-slide payment ">
                     <div class="form-slide-title">
                         <span class="form-slide-title-text font-purple">Payment</span>
                     </div>
@@ -215,7 +231,7 @@
                             Card Number
                         </div>
                         <div class="input-container">
-                            <input type="number" name="card-number" class="input-field input-required"
+                            <input type="text" name="card-number" class="input-field input-required"
                                    placeholder="XXXX XXXX XXXX XXXX XXXX" title="Card Number">
                             <p class="input-tooltip">Please enter your card numbers</p>
                         </div>
@@ -226,7 +242,7 @@
                                 Expire Date
                             </div>
                             <div class="input-container">
-                                <input type="number" id="datemax" name="datemax" class="input-field input-required"
+                                <input type="text" id="datemax" name="datemax" class="input-field input-required"
                                        max="1979-12-31" placeholder="MM / YY">
                                 <p class="input-tooltip">Please enter your card expire date</p>
                             </div>
@@ -236,7 +252,7 @@
                                 Security Code
                             </div>
                             <div class="input-container">
-                                <input type="password" name="security-code" class="input-field input-required"
+                                <input type="text" name="security-code" class="input-field input-required"
                                        title="Security Code">
                                 <p class="input-tooltip">Please enter your security code</p>
                             </div>
