--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                    title="City"
                                    data-copy="city"
                             >
-                            <img src="images/city.svg" alt="" class="input-img">
+                            <img src="images/city.svg" alt="" class="input-img get-city">
                             <p class="input-tooltip">
                                 Please enter shipping city
                             </p>
@@ -108,7 +108,7 @@
                         <div class="inputs-row">
                             <div class="input-container">
                                 <select name="shipping-country"
-                                        class="input-field input-required"
+                                        class="input-field input-required country-select"
                                         title="Country"
                                         data-copy="country"
                                 >
@@ -179,12 +179,12 @@
                                    title="City"
                                    data-paste="city"
                             >
-                            <img src="images/city-target.svg" alt="" class="input-img">
+                            <img src="images/city-target.svg" alt="" class="input-img get-city">
                             <p class="input-tooltip">Please enter shipping city</p>
                         </div>
                         <div class="inputs-row">
                             <div class="input-container">
-                                <select name="billing-country" class="input-field input-required" title="Country"
+                                <select name="billing-country" class="input-field input-required country-select" title="Country"
                                         data-paste="country"
                                 >
                                     <option disabled selected value="">Country</option>
